# conformal-econ-forecast

./: .coverage.Adrians-MacBook-Pro_local.pid32666.XnrOZbax.HNQIp837rWOh  .coverage.Adrians-MacBook-Pro_local.pid40355.Xqk3VESx.HNQIp837rWOh  .gitignore  LICENSE  PRD.md  README.md  TESTS_EXPLAINED.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  data_refresh.yml
app/: main.py
app/components/: metrics_card.py  regime_badge.py  sidebar.py
app/pages/: 01_overview.py  02_explorer.py  03_benchmark.py  04_regimes.py  05_methodology.py
data/sample/: A191RL1Q225SBEA.parquet  CPIAUCSL.parquet  DCOILWTICO.parquet  UNRATE.parquet
notebooks/: 01_data_exploration.ipynb  02_model_validation.ipynb  03_results_analysis.ipynb
results/: benchmark_results.parquet
scripts/: generate_sample_data.py
src/conformal_econ/: __init__.py
src/conformal_econ/benchmark/: __init__.py  compare.py  runner.py
src/conformal_econ/conformal/: __init__.py  evaluation.py  splitter.py  wrappers.py
src/conformal_econ/data/: __init__.py  cache.py  fred.py  regime.py
src/conformal_econ/models/: __init__.py  base.py  foundation.py  neural.py  statistical.py  tree.py
src/conformal_econ/viz/: __init__.py  coverage_plot.py  forecast_plot.py  regime_plot.py
tests/: conftest.py  test_benchmark.py  test_conformal.py  test_data.py  test_models.py
